training accuracies added to notebook.
Signed-off-by: Shivam Pandey <pandeyshivam2017robotics@gmail.com>

--- a/notebooks/Train Attention Classifier.ipynb
+++ b/notebooks/Train Attention Classifier.ipynb
@@ -51,15 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f9cc4bea",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_path = \"/home/shivam/2021-22-2/ML4CE/Assignments/Assignment3/Driver-Gaze-Zone-Classification/data/gaze_dataset\"\n",
-    "# dataset_auto_enc = DGZCAutoEncoderDataset(data_path, size=(200, 200))\n",
-    "dataset_classifier = DGZCClassifierDataset(data_path, size=(200, 200))\n",
-    "# dataset_inference = DGZCInferenceDataset(data_path, size=(200, 200))"
+    "dataset_classifier = DGZCClassifierDataset(data_path, size=(200, 200))"
    ]
   },
   {
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b49ec19e",
    "metadata": {},
    "outputs": [],
@@ -90,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "01899652",
    "metadata": {},
    "outputs": [],
@@ -100,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "464969c3",
    "metadata": {},
    "outputs": [],
@@ -119,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "bb8b1312",
    "metadata": {},
    "outputs": [
@@ -192,7 +190,7 @@
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "baf81260",
    "metadata": {},
    "outputs": [],
@@ -235,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d1f7d9dd",
    "metadata": {},
    "outputs": [
@@ -312,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0933f6f3",
    "metadata": {},
    "outputs": [],
@@ -332,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a189770e",
    "metadata": {},
    "outputs": [],
@@ -373,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5e48c630",
    "metadata": {},
    "outputs": [],
@@ -384,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "de4f52da",
    "metadata": {},
    "outputs": [
@@ -457,7 +455,7 @@
        ")"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,6 +622,32 @@
     "plt.title('Total loss')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b34ea33",
+   "metadata": {},
+   "source": [
+    "### Get accuracy on training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c086ec12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final training loss, and Training Accuracy is : [1.0749695596694946, 0.8328]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Final training loss, and Training Accuracy is : {compute_loss(dataloader, model, criterion)}')"
    ]
   },
   {
